--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Build
         run: |
           npm install
+          export NODE_OPTIONS=--openssl-legacy-provider
           npm run build
+
       
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
